syntax = "proto3";

package auth;

option go_package = "./auth;authv1";

service Auth {
	rpc Register(RegisterRequest) returns (RegisterResponse);
	rpc Login(LoginRequest) returns (LoginResponse);
	rpc ValidateToken(ValidateTokenRequest) returns (ValidateTokenResponse);
        rpc GetUserDetails(GetUserDetailsRequest) returns (GetUserDetailsResponse);
}

message RegisterRequest {
	string email = 1;
	string password = 2;
}

message RegisterResponse {
	int64 user_id = 1;
}

message LoginRequest {
	string email = 1;
	string password = 2;
}

message LoginResponse {
	string token = 1;
}

message ValidateTokenRequest {
	string token = 1;
}

message ValidateTokenResponse {
	int64 user_id = 1;
}

message GetUserDetailsRequest {
        int64 user_id = 1;
}

message GetUserDetailsResponse {
        int64 user_id = 1;
        string email = 2;
}
